@@ -8,6 +8,7 @@ v 6.7.0
   - Show contribution guide link for new issue form (Jeroen van Baarsen)
   - Fix CI status for merge requests from fork 
   - Added option to remove issue assignee on project issue page and issue edit page (Jason Blanchard)
+  - Create and Update MR calls now support the description parameter (Greg Messner)
 
 v 6.6.2
   - Fix 500 error on branch/tag create or remove via UI
